# ncnn-mobile

./: .gitignore  README.md
scene_classify/: CMakeLists.txt
scene_classify/src/: SceneClassify.cpp
zoo/audio_emotion/: CMakeLists.txt  README.md
zoo/audio_emotion/include/: audio_emotion_detect.h
zoo/audio_emotion/src/: audio_emotion_detect.cpp
zoo/scene_classify/: CMakeLists.txt  README.md
zoo/scene_classify/include/: SceneClassify.h
